Thu Jul 10 19:03:14 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Depgen/DependencyEditor.pm:
        * modules/Depgen/DependencyGenerator.pm:
        * modules/Depgen/DependencyWriter.pm:
        * modules/Depgen/DependencyWriterFactory.pm:
        * modules/Depgen/Driver.pm:
        * modules/Depgen/MakeDependencyWriter.pm:
        * modules/Depgen/MakeObjectGenerator.pm:
        * modules/Depgen/NMakeDependencyWriter.pm:
        * modules/Depgen/NMakeObjectGenerator.pm:
        * modules/Depgen/ObjectGenerator.pm:
        * modules/Depgen/ObjectGeneratorFactory.pm:
        * modules/Depgen/Preprocessor.pm:

          Cleaned up the code and reduced op code count.

        * templates/vc7.mpd:
        * templates/vc8.mpd:

          Added a VCPostCleanEventTool, which doesn't exist in Visual
          Studio, to hold the 'postclean' settings.  This is mainly here to
          enable another script to come along and perform the postclean
          function.

Thu Jul 10 18:28:33 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/ProjectCreator.pm:

          Added a new feature, pre_dirname, which is similar to pre_filename
          except that the value is prepended to the output directory for
          generated files.  If a separate directory is desired, the
          pre_dirname setting should end in a slash.

Thu Jul 10 15:28:50 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * devtools/document_template.pl:

          Fixed a bug where template variables used within template
          functions were ignored.

        * docs/README:
        * modules/ProjectCreator.pm:

          Added the ability to utilize project settings within the
          Define_Custom command, commandflags, dependent, output_option,
          and postcommand settings.

Thu Jul 10 14:29:44 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/MakeProjectCreator.pm:
        * templates/make.net.mpd: